Alta de Metas Fisicas - Grafico(Seleciona Agua)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -252,7 +252,7 @@
             android:theme="@style/AppTheme.Bitrubio"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".Prueba"
+            android:name=".Metas.TiempoMeta"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Bitrubio"
             android:windowSoftInputMode="stateHidden" />
