--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Bitrubio">
 
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
 
         <activity
             android:name=".IntroActivity"
@@ -255,7 +262,8 @@
             android:name=".Metas.TiempoMeta"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Bitrubio"
-            android:windowSoftInputMode="stateHidden" />
+            android:windowSoftInputMode="stateHidden"
+             />
 
         <meta-data
             android:name="com.google.android.gms.version"
