--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,21 +9,22 @@ android {
             storePassword 'mypassword'
         }
     }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
 
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.bitrubio.prototipoebitrubio"
-        minSdkVersion 21
+        minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+          //  proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     dexOptions {
@@ -41,20 +42,20 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:9.2.0'
     compile 'com.google.android.gms:play-services:9.2.0'
     compile 'com.google.android.gms:play-services-maps:9.2.0'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:support-v4:23.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'cz.msebera.android:httpclient:4.4.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.ogaclejapan.arclayout:library:1.1.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.facebook.android:facebook-android-sdk:4.21.0'
+    compile 'com.android.support:multidex:1.0.1'
 
-    
 }
